# desktop-blog-rust

./: .gitignore
frontend/: Cargo.toml
frontend/src/: main.rs
usermicroservice/: Cargo.toml
usermicroservice/migrations/2022-11-09-211330_create_user/: up.sql
usermicroservice/src/: controllers.rs  main.rs  models.rs  service.rs
usermicroservice/src/service/: models.rs  schema.rs
