[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gio = "0.16.2"
reqwest = {version="0.11.12",features=["json"]}
tokio = {version="1.21.2",features=["full"]}
serde_json = "1.0.87"
serde = "1.0.147"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.adw]
package = "libadwaita"
version = "0.2.0"
features = ["v1_2"]
